--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "comparator.ts",
   "version": "1.0.0",
   "description": "A TypeScript library for comparing values",
+  "keywords": [],
+  "license": "MIT",
+  "author": "Simon Kjellberg <simon.kjellberg@gmail.com>",
   "type": "module",
   "exports": {
     ".": {
@@ -18,15 +21,11 @@
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
     "lint:eslint": "eslint --max-warnings=0 .",
     "lint:prettier": "prettier --check .",
+    "prepare": "husky",
     "pretest": "pnpm run build",
     "test": "tsx --experimental-test-coverage --test-coverage-include=index.ts --test-reporter=spec --test-reporter=lcov --test-reporter-destination=stdout --test-reporter-destination=lcov.info --test test.ts",
-    "posttest": "attw --pack .",
-    "prepare": "husky"
+    "posttest": "attw --pack ."
   },
-  "keywords": [],
-  "author": "Simon Kjellberg <simon.kjellberg@gmail.com>",
-  "license": "MIT",
-  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.4",
     "@eslint/js": "9.25.1",
@@ -45,5 +44,6 @@
     "tsx": "4.19.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0"
-  }
+  },
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
