--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - run: corepack enable
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
-      - run: npm i -g corepack
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
       - run: pnpm lint
