--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "pnpm build:ts && pnpm build:docs",
+    "build:docs": "pnpm build:docs:extract && pnpm build:docs:generate && pnpm build:docs:format",
+    "build:docs:extract": "api-extractor run",
+    "build:docs:format": "prettier --log-level warn -w docs/api/**/*.md",
+    "build:docs:generate": "api-documenter markdown -i=docs/api -o=docs/api",
+    "build:ts": "tsup",
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
     "lint:eslint": "eslint --max-warnings=0 .",
     "lint:prettier": "prettier --check .",
@@ -35,6 +40,7 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.4",
     "@eslint/js": "9.25.1",
+    "@microsoft/api-documenter": "7.26.24",
     "@microsoft/api-extractor": "7.52.5",
     "@tsconfig/recommended": "1.0.8",
     "@tsconfig/strictest": "2.0.5",
