--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,4 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:js-lib"
-  ]
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  extends: ["config:js-lib"],
 }
