--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.4",
+    "@changesets/changelog-github": "0.5.1",
+    "@changesets/cli": "2.29.2",
     "@eslint/js": "9.25.1",
     "@microsoft/api-documenter": "7.26.24",
     "@microsoft/api-extractor": "7.52.5",
