Switch to typedocs for API documentation

--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   ],
   "scripts": {
     "build": "pnpm build:ts && pnpm build:docs",
-    "build:docs": "pnpm build:docs:extract && pnpm build:docs:generate && pnpm build:docs:format",
-    "build:docs:extract": "api-extractor run",
-    "build:docs:format": "prettier --log-level warn -w docs/api/**/*.md",
-    "build:docs:generate": "api-documenter markdown -i=docs/api -o=docs/api",
+    "build:docs": "pnpm pnpm build:docs:generate && pnpm build:docs:format",
+    "build:docs:format": "prettier --log-level warn -w docs/api",
+    "build:docs:generate": "typedoc",
     "build:ts": "tsup",
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
     "lint:eslint": "eslint --max-warnings=0 .",
@@ -42,8 +41,6 @@
     "@changesets/changelog-github": "0.5.1",
     "@changesets/cli": "2.29.2",
     "@eslint/js": "9.25.1",
-    "@microsoft/api-documenter": "7.26.24",
-    "@microsoft/api-extractor": "7.52.5",
     "@tsconfig/recommended": "1.0.8",
     "@tsconfig/strictest": "2.0.5",
     "@types/node": "22.15.2",
@@ -56,6 +53,8 @@
     "prettier": "3.5.3",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
+    "typedoc": "0.28.3",
+    "typedoc-plugin-markdown": "4.6.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0"
   },
