--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.5.1",
     "prettier": "3.5.3",
+    "prettier-plugin-jsdoc": "1.3.2",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typedoc": "0.28.3",
