--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "dist/index.cjs",
   "files": [
     "dist",
-    "docs/README.md"
+    "README.md"
   ],
   "scripts": {
     "build": "pnpm build:ts && pnpm build:docs",
