Improve documentation and examples (#14)
* Improve TSDocs for all methods

Add detailed TSDocs and examples for methods in `index.ts`.

* Add a detailed description and example for the `comparator` function.
* Add a detailed description and example for the `comparing` function.
* Add a detailed description and example for the `nullsFirst` function.
* Add a detailed description and example for the `nullsLast` function.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/simonkberg/comparator.ts?shareId=XXXX-XXXX-XXXX-XXXX).

* Clean up and improve docs

* Add jsdoc prettier plugin, enable prosewrap

* Fix formatting

* Disable prosewrap

* Revert formatting change

* Move readme to root, remove api prefix in docs

* Add homepage link in package

* Add changeset

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "comparator.ts",
   "version": "1.0.2",
   "description": "A TypeScript library for comparing values",
-  "keywords": [],
+  "homepage": "https://github.com/simonkberg/comparator.ts#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/simonkberg/comparator.ts.git"
@@ -19,7 +19,7 @@
   "main": "dist/index.cjs",
   "files": [
     "dist",
-    "docs/README.md"
+    "README.md"
   ],
   "scripts": {
     "build": "pnpm build:ts && pnpm build:docs",
@@ -50,6 +50,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.5.1",
     "prettier": "3.5.3",
+    "prettier-plugin-jsdoc": "1.3.2",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typedoc": "0.28.3",
