--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,4 +1,9 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
-  extends: ["config:js-lib"],
+  extends: [
+    "config:js-lib",
+    "helpers:pinGitHubActionDigests",
+    ":configMigration",
+    ":automergeMinor",
+  ],
 }
