--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,7 +7,7 @@
     ":automergeMinor",
     ":automergeDigest",
   ],
-  "pinDigest": {
-    "automerge": true,
+  pinDigest: {
+    automerge: true,
   },
 }
