Extend maintainLockFilesWeekly in renovate

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,6 +4,7 @@
     "config:js-lib",
     "helpers:pinGitHubActionDigests",
     ":configMigration",
+    ":maintainLockFilesWeekly",
     ":automergeMinor",
     ":automergeDigest",
   ],
